# jreadability

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml
.github/workflows/: autofix.yml  docs.yml  mypy.yml  test.yml
src/jreadability/: __init__.py  jreadability.py
tests/: test_jreadability.py
