[build-system]
requires = ["setuptools>=69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jreadability"
version = "1.1.1"
description = "Calculate readability scores for Japanese texts."
readme = "README.md"
authors = [{ name = "Joshua Hamilton", email = "hamiltonjoshuadavid@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords=['japanese', 'readability']
urls = { homepage = "https://github.com/joshdavham/jreadability" }
dependencies = [
    "fugashi==1.3.2",
    "unidic-lite==1.0.8"
]
requires-python = ">=3.9"

[tool.mypy]
ignore_missing_imports = true