[build-system]
requires = ["setuptools>=69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jreadability"
version = "1.1.4"
description = "Calculate readability scores for Japanese texts."
readme = "README.md"
authors = [{ name = "Joshua Hamilton", email = "hamiltonjoshuadavid@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords=['japanese', 'readability']
urls = { homepage = "https://github.com/joshdavham/jreadability" }
dependencies = [
    "fugashi",
    "unidic-lite"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["setuptools", "pytest", "ruff"]

[tool.mypy]
ignore_missing_imports = true